// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns activities 1`] = `Array []`;

exports[`returns activities 2`] = `
Array [
  Object {
    "attestations": Array [
      Object {
        "name": "Bob",
      },
    ],
    "authorizedAt": 14834004807621990,
    "id": "19",
    "type": "attestation",
  },
  Object {
    "attestations": Array [
      Object {
        "name": "Bob",
      },
    ],
    "authorizedAt": 14834004807621990,
    "id": "18",
    "opened": true,
    "type": "attestation",
  },
  Object {
    "id": 13,
    "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "attestation",
  },
  Object {
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc03",
    "id": 12,
    "type": "disclosure",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "id": 11,
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "connect",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "id": 10,
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "sign",
  },
]
`;

exports[`returns activities 3`] = `
Array [
  Object {
    "authorizedAt": 14834004807621990,
    "id": "15",
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "connect",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "id": "14",
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "sign",
  },
]
`;

exports[`returns activitiesByAddress 1`] = `Array []`;

exports[`returns activitiesByAddress 2`] = `
Array [
  Object {
    "authorizedAt": 14834004807621990,
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "id": 10,
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "sign",
  },
]
`;

exports[`returns activitiesByAddress 3`] = `
Array [
  Object {
    "authorizedAt": 14834004807621990,
    "id": 11,
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "connect",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "id": 10,
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "sign",
  },
]
`;

exports[`returns activitiesByAddress 4`] = `
Array [
  Object {
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc03",
    "id": 12,
    "type": "disclosure",
  },
]
`;

exports[`returns activitiesForAddress 1`] = `Array []`;

exports[`returns activitiesForAddress 2`] = `
Array [
  Object {
    "attestations": Array [
      Object {
        "name": "Bob",
      },
    ],
    "authorizedAt": 14834004807621990,
    "id": "19",
    "type": "attestation",
  },
  Object {
    "attestations": Array [
      Object {
        "name": "Bob",
      },
    ],
    "authorizedAt": 14834004807621990,
    "id": "18",
    "opened": true,
    "type": "attestation",
  },
  Object {
    "id": 13,
    "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "attestation",
  },
  Object {
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc03",
    "id": 12,
    "type": "disclosure",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "id": 11,
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "connect",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "id": 10,
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "sign",
  },
]
`;

exports[`returns activitiesForAddress 3`] = `
Array [
  Object {
    "authorizedAt": 14834004807621990,
    "id": "15",
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "connect",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "id": "14",
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "sign",
  },
]
`;

exports[`returns history 1`] = `Array []`;

exports[`returns history 2`] = `
Array [
  Object {
    "attestations": Array [
      Object {
        "name": "Bob",
      },
    ],
    "authorizedAt": 14834004807621990,
    "id": "19",
    "type": "attestation",
  },
  Object {
    "attestations": Array [
      Object {
        "name": "Bob",
      },
    ],
    "authorizedAt": 14834004807621990,
    "id": "18",
    "opened": true,
    "type": "attestation",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "id": 11,
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "connect",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "id": 10,
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "sign",
  },
]
`;

exports[`returns history 3`] = `
Array [
  Object {
    "authorizedAt": 14834004807621990,
    "id": "15",
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "connect",
  },
  Object {
    "authorizedAt": 14834004807621990,
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "id": "14",
    "to": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "sign",
  },
]
`;

exports[`returns notifications 1`] = `Array []`;

exports[`returns notifications 2`] = `
Array [
  Object {
    "attestations": Array [
      Object {
        "name": "Bob",
      },
    ],
    "authorizedAt": 14834004807621990,
    "id": "19",
    "type": "attestation",
  },
  Object {
    "id": 13,
    "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "attestation",
  },
  Object {
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc03",
    "id": 12,
    "type": "disclosure",
  },
]
`;

exports[`returns notifications 3`] = `Array []`;

exports[`returns unconfirmedTransactions 1`] = `Array []`;

exports[`returns unconfirmedTransactions 2`] = `Array []`;

exports[`returns unconfirmedTransactions 3`] = `
Array [
  Array [
    "15",
    "abcd",
  ],
]
`;

exports[`returns unread 1`] = `Array []`;

exports[`returns unread 2`] = `
Array [
  Object {
    "id": 13,
    "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "type": "attestation",
  },
  Object {
    "client_id": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc03",
    "id": 12,
    "type": "disclosure",
  },
]
`;

exports[`returns unread 3`] = `Array []`;
